--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-防空洞最新 QQ 群号：1007418110
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proxy Example</title>
+    <style>
+        /* 设置iframe全屏显示 */
+        iframe {
+            width: 100%;
+            height: 100vh;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to Proxy Page</h1>
+    <p>防空洞最新 QQ 群号：1007418110</p>
+    <iframe src="/proxy"></iframe>
+</body>
+</html>
