--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proxy Example</title>
-    <style>
-        /* 设置iframe全屏显示 */
-        iframe {
-            width: 100%;
-            height: 100vh;
-            border: none;
-        }
-    </style>
+    <title>防空洞PornHub代理</title>
 </head>
 <body>
-    <h1>Welcome to Proxy Page</h1>
+    <h1>防空洞专用PornHub代理</h1>
     <p>防空洞最新 QQ 群号：1007418110</p>
     <iframe src="/proxy"></iframe>
 </body>
