--- a/index.html
+++ b/index.html
@@ -3,89 +3,117 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>全能反向代理</title>
+  <title>防空洞专用代理</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
-    }
-    .header {
-      background-color: #4CAF50;
-      color: white;
-      padding: 15px;
-      text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .container {
+      background-color: #f0f2f5;
       display: flex;
       flex-direction: column;
-      height: calc(100vh - 70px);
-    }
-    .input-area {
-      padding: 20px;
-      background-color: white;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      display: flex;
+      height: 100vh;
       justify-content: center;
       align-items: center;
     }
-    .input-area input {
-      width: 60%;
-      padding: 10px;
-      font-size: 1em;
+    .container {
+      background-color: white;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      text-align: center;
+      max-width: 400px;
+      width: 90%;
+    }
+    h1 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+    .qq-group {
+      margin-bottom: 10px;
+      color: #555;
+    }
+    .color-text {
+      margin-bottom: 20px;
+      font-weight: bold;
+      animation: colorChange 5s infinite;
+    }
+    @keyframes colorChange {
+      0% { color: #e74c3c; }
+      25% { color: #f1c40f; }
+      50% { color: #2ecc71; }
+      75% { color: #3498db; }
+      100% { color: #e74c3c; }
+    }
+    .input-area {
+      display: flex;
+      align-items: center;
       border: 1px solid #ccc;
-      border-radius: 4px;
+      border-radius: 5px;
+      overflow: hidden;
     }
-    .input-area button {
-      padding: 10px 20px;
-      margin-left: 10px;
-      font-size: 1em;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    .input-area button:hover {
-      background-color: #45a049;
-    }
-    .iframe-container {
+    .input-area input {
       flex: 1;
       padding: 10px;
-      background-color: #eaeaea;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
       border: none;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      outline: none;
+      font-size: 1em;
     }
-    @media (max-width: 768px) {
-      .input-area input {
-        width: 50%;
+    .input-area button {
+      background-color: #4CAF50;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .input-area button img {
+      width: 20px;
+      height: 20px;
+    }
+    .footer-text {
+      margin-top: 20px;
+      font-size: 0.9em;
+      color: #888;
+      animation: textColorChange 5s infinite;
+    }
+    @keyframes textColorChange {
+      0% { color: #e74c3c; }
+      25% { color: #f1c40f; }
+      50% { color: #2ecc71; }
+      75% { color: #3498db; }
+      100% { color: #e74c3c; }
+    }
+    @media (max-width: 500px) {
+      .container {
+        padding: 20px;
       }
-      .input-area button {
-        padding: 10px;
-        margin-left: 5px;
+      .input-area input {
+        font-size: 0.9em;
+      }
+      .input-area button img {
+        width: 16px;
+        height: 16px;
       }
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <h1>全能反向代理</h1>
-  </div>
   <div class="container">
+    <h1>防空洞专用代理</h1>
+    <div class="qq-group">最新QQ群：1007418110</div>
+    <div class="color-text">技术无价，请勿封杀</div>
     <div class="input-area">
-      <input type="text" id="url-input" placeholder="输入要访问的网址，例如：https://www.example.com" />
-      <button onclick="goProxy()">访问</button>
+      <input type="text" id="url-input" placeholder="输入要访问的域名，例如：www.google.com" />
+      <button onclick="goProxy()" title="访问">
+        <!-- 回车图标 SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 0 24 24" fill="#fff">
+          <path d="M10 17l5-5-5-5v10z"/>
+          <path d="M0 24V0h24v24H0z" fill="none"/>
+        </svg>
+      </button>
     </div>
-    <div class="iframe-container">
-      <iframe id="proxy-frame" src=""></iframe>
-    </div>
+    <div class="footer-text">技术无价，请勿封杀</div>
   </div>
 
   <script>
@@ -105,14 +133,21 @@
 
     function goProxy() {
       const input = document.getElementById('url-input').value
-      const iframe = document.getElementById('proxy-frame')
       const proxyUrl = getProxyUrl(input)
       if (proxyUrl) {
-        iframe.src = proxyUrl
+        window.location.href = proxyUrl
       } else {
         alert('请输入有效的网址')
       }
     }
+
+    // 允许按回车键提交
+    document.getElementById('url-input').addEventListener('keydown', function(event) {
+      if (event.key === 'Enter') {
+        event.preventDefault()
+        goProxy()
+      }
+    })
 
     // 自动加载当前URL的代理页面（如果直接访问 /proxy/<URL>)
     window.onload = () => {
@@ -120,7 +155,6 @@
       if (pathSegments[1] === 'proxy' && pathSegments[2]) {
         const encodedUrl = pathSegments.slice(2).join('/')
         const decodedUrl = decodeURIComponent(encodedUrl)
-        document.getElementById('proxy-frame').src = `/proxy/${encodedUrl}`
         document.getElementById('url-input').value = decodedUrl
       }
     }
