--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
     function showNormalModal() {
       modalContent.innerHTML = `
-        <p>本软件仅用于保护隐私，不得用于非法用途！<br>请勿在收GFW保护的地区使用，请遵守中华人民共和国法律，可以永久关闭。</p>
+        <p>本软件仅用于保护隐私，不得用于非法用途！<br>请勿在受GFW保护的地区使用，请遵守中华人民共和国法律，可以永久关闭。</p>
         <label style="display: block; margin-bottom:10px;">
           <input type="checkbox" id="permanent-close"> 永久关闭此提示
         </label>
