--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
@@ -189,10 +189,43 @@
       background: #aaa !important;
       cursor: not-allowed !important;
     }
+    .logo-links {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+  justify-content: center;
+  align-items: center;
+    }
+  
+  .logo-links .icon-link {
+    text-decoration: none;
+    color: #333;
+    font-size: 0.9em;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    }
+  
+  .logo-links .icon-link img {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <div class="logo-links">
+      <a class="icon-link" href="https://cn.pornhub.com" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Pornhub-logo.svg/2560px-Pornhub-logo.svg.png" alt="Pornhub Logo" />
+        一键直达 Pornhub
+      </a>
+      <a class="icon-link" href="https://www.xvideos.com" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/XVideos_logo.svg/2560px-XVideos_logo.svg.png" alt="XVideos Logo" />
+        一键直达 XVideos
+      </a>
+    </div>
     <h1>防空洞专用代理</h1>
     <div class="qq-group">
       <a class="icon-link" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&noverify=0&group_code=1007418110" target="_blank">
@@ -206,7 +239,7 @@
         TG群组
       </a>
     </div>
-    <div class="color-text">技术无价，请勿封杀</div>
+    <div class="color-text">技术无罪，请勿封杀</div>
     <div class="input-area">
       <input type="text" id="url-input" placeholder="输入要访问的域名，例如：www.google.com" />
       <button onclick="goProxy()" title="访问">
