--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
@@ -218,11 +218,11 @@
   <div class="container">
     <div class="logo-links">
       <a class="icon-link" href="https://cn.pornhub.com" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ee/Pornhub-logo.svg/2560px-Pornhub-logo.svg.png" alt="Pornhub Logo" />
+        <img src="https://play-lh.googleusercontent.com/nX_X7VLuovWewAE9iJysyQ2XtZlq55ijTulOLquOxN1K0Ihx93F4p8COzJuihWV2H5Y" alt="Pornhub Logo" />
         一键直达 Pornhub
       </a>
       <a class="icon-link" href="https://www.xvideos.com" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/XVideos_logo.svg/2560px-XVideos_logo.svg.png" alt="XVideos Logo" />
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJcbt2eiu0qr5WHMYp3O_nlAA2TTN2sxuklQ&s" alt="XVideos Logo" />
         一键直达 XVideos
       </a>
     </div>
