--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 <body>
   <div class="container">
     <div class="logo-links">
-      <a class="icon-link" href="https://cn.pornhub.com" target="_blank">
+      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/cn.pornhub.com" target="_blank">
         <img src="https://play-lh.googleusercontent.com/nX_X7VLuovWewAE9iJysyQ2XtZlq55ijTulOLquOxN1K0Ihx93F4p8COzJuihWV2H5Y" alt="Pornhub Logo" />
         一键直达 Pornhub
       </a>
-      <a class="icon-link" href="https://www.xvideos.com" target="_blank">
+      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/www.xvideos.com" target="_blank">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJcbt2eiu0qr5WHMYp3O_nlAA2TTN2sxuklQ&s" alt="XVideos Logo" />
         一键直达 XVideos
       </a>
