--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         TG群组
       </a>
     </div>
-    <div class="color-text">技术无价，请勿封杀</div>
+    <div class="color-text">技术无罪，请勿封杀</div>
     <div class="input-area">
       <input type="text" id="url-input" placeholder="输入要访问的域名，例如：www.google.com" />
       <button onclick="goProxy()" title="访问">
@@ -216,7 +216,7 @@
         </svg>
       </button>
     </div>
-    <div class="footer-text">技术无价，请勿封杀</div>
+    <div class="footer-text">技术无罪，请勿封杀</div>
     <div class="extra-note">
       由于我只是一个初中生，我没钱，如果以后网站流量大了，免费套餐可能不够用，如有意愿欢迎tg群联系我捐款
     </div>
