--- a/index.html
+++ b/index.html
@@ -189,10 +189,43 @@
       background: #aaa !important;
       cursor: not-allowed !important;
     }
+    .logo-links {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+  justify-content: center;
+  align-items: center;
+    }
+  
+  .logo-links .icon-link {
+    text-decoration: none;
+    color: #333;
+    font-size: 0.9em;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    }
+  
+  .logo-links .icon-link img {
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <div class="logo-links">
+      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/cn.pornhub.com" target="_blank">
+        <img src="https://play-lh.googleusercontent.com/nX_X7VLuovWewAE9iJysyQ2XtZlq55ijTulOLquOxN1K0Ihx93F4p8COzJuihWV2H5Y" alt="Pornhub Logo" />
+        一键直达 Pornhub
+      </a>
+      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/www.xvideos.com" target="_blank">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJcbt2eiu0qr5WHMYp3O_nlAA2TTN2sxuklQ&s" alt="XVideos Logo" />
+        一键直达 XVideos
+      </a>
+    </div>
     <h1>防空洞专用代理</h1>
     <div class="qq-group">
       <a class="icon-link" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&noverify=0&group_code=1007418110" target="_blank">
