--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
     </div>
     <div class="footer-text">技术无罪，请勿封杀</div>
     <div class="extra-note">
-      由于我只是一个初中生，我没钱，如果以后网站流量大了，免费套餐可能不够用，如有意愿欢迎tg群联系我捐款
+      <p><strong>站长邮箱：</strong><a href="mailto:admin.obanarchy.org">admin.obanarchy.org</a></p>
+      <p>站长邮箱由于我只是一个初中生，我没钱，如果以后网站流量大了，免费套餐可能不够用，如有意愿欢迎联系我捐款❤️。</p>
     </div>
   </div>
 
@@ -338,7 +339,7 @@
 
     function showNormalModal() {
       modalContent.innerHTML = `
-        <p>本软件仅用于保护隐私，不得用于非法用途！<br>请勿在受GFW保护的地区使用，请遵守中华人民共和国法律，可以永久关闭。</p>
+        <p>本软件仅用于保护隐私，不得用于非法用途！<br>请勿在受GFW保护的地区使用，请遵守中华人民共和国法律。</p>
         <label style="display: block; margin-bottom:10px;">
           <input type="checkbox" id="permanent-close"> 永久关闭此提示
         </label>
