--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
         <img src="https://play-lh.googleusercontent.com/nX_X7VLuovWewAE9iJysyQ2XtZlq55ijTulOLquOxN1K0Ihx93F4p8COzJuihWV2H5Y" alt="Pornhub Logo" />
         一键直达 Pornhub
       </a>
-      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/www.xvideos.com" target="_blank">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJcbt2eiu0qr5WHMYp3O_nlAA2TTN2sxuklQ&s" alt="XVideos Logo" />
-        一键直达 XVideos
+      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/zh.xhamster.com" target="_blank">
+        <img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/e2/22/48/e2224825-e0a8-7d2f-571f-f4ae139e3992/source/256x256bb.jpg" alt="xHamster Logo" />
+        一键直达 xHamster 
       </a>
     </div>
     <h1>防空洞专用代理</h1>
@@ -252,7 +252,7 @@
     <div class="footer-text">技术无罪，请勿封杀</div>
     <div class="extra-note">
       <p><strong>站长邮箱：</strong><a href="mailto:admin.obanarchy.org">admin.obanarchy.org</a></p>
-      <p>站长邮箱由于我只是一个初中生，我没钱，如果以后网站流量大了，免费套餐可能不够用，如有意愿欢迎联系我捐款❤️。</p>
+      <p>由于我只是一个初中生，我没钱，如果以后网站流量大了，免费套餐可能不够用，如有意愿欢迎联系我捐款❤️。</p>
     </div>
   </div>
 
