--- a/index.html
+++ b/index.html
@@ -9,46 +9,12 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f0f2f5;
-      height: 100vh;
       display: flex;
       flex-direction: column;
+      height: 100vh;
+      justify-content: center;
       align-items: center;
-    }
-
-    /* 顶部横栏样式 */
-    .top-bar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: #333;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      padding: 5px 10px;
-      z-index: 999;
-    }
-
-    .top-bar marquee {
-      flex: 1;
-      font-size: 0.9em;
-      margin: 0 10px;
-      color: #fff;
-    }
-
-    .top-bar button {
-      background: #4CAF50;
-      border: none;
-      color: #fff;
-      padding: 5px 10px;
-      margin-left: 5px;
-      cursor: pointer;
-      border-radius: 3px;
-      font-size: 0.8em;
-    }
-
-    .top-bar button:hover {
-      background: #45a049;
+      overflow: hidden;
     }
 
     .container {
@@ -61,7 +27,6 @@
       width: 90%;
       position: relative;
       z-index: 10;
-      margin-top: 100px; /* 留出顶部导航栏位置 */
     }
 
     h1 {
@@ -152,6 +117,7 @@
       }
     }
 
+    /* 弹窗样式 */
     .modal-overlay {
       position: fixed;
       top: 0;
@@ -159,10 +125,10 @@
       width: 100vw;
       height: 100vh;
       background: rgba(0,0,0,0.5);
-      display: none;
+      display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 1000;
+      z-index: 100;
     }
 
     .modal {
@@ -170,17 +136,11 @@
       padding: 20px;
       border-radius: 8px;
       max-width: 300px;
-      text-align: left;
-      position: relative;
+      text-align: center;
     }
 
-    .modal h2 {
-      margin-top: 0;
-      font-size: 1em;
-      margin-bottom: 10px;
-    }
-
-    .modal p, .modal ul {
+    .modal p {
+      margin-bottom: 20px;
       font-size: 0.9em;
       line-height: 1.4;
       color: #333;
@@ -190,24 +150,19 @@
       background: #4CAF50;
       color: #fff;
       border: none;
-      padding: 5px 10px;
+      padding: 10px;
       cursor: pointer;
       border-radius: 5px;
-      margin-top: 10px;
-      margin-right: 5px;
-      font-size: 0.8em;
+      margin: 5px;
     }
 
-    .modal .close-btn {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      background: #aaa;
-      border: none;
-      padding: 3px 6px;
-      cursor: pointer;
-      color: #fff;
-      border-radius: 3px;
+    .icon-link {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      text-decoration: none;
+      color: #333;
+      font-size: 0.9em;
     }
 
     .icon-link img {
@@ -226,72 +181,60 @@
       text-align: center;
     }
 
+    .modal input[type="checkbox"] {
+      margin-right: 5px;
+    }
+
+    .btn-disabled {
+      background: #aaa !important;
+      cursor: not-allowed !important;
+    }
     .logo-links {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 20px;
-      justify-content: center;
-      align-items: center;
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+  justify-content: center;
+  align-items: center;
     }
-
-    .logo-links .icon-link {
-      text-decoration: none;
-      color: #333;
-      font-size: 0.9em;
-      display: flex;
-      align-items: center;
-      gap: 6px;
+  
+  .logo-links .icon-link {
+    text-decoration: none;
+    color: #333;
+    font-size: 0.9em;
+    display: flex;
+    align-items: center;
+    gap: 6px;
     }
-
-    .logo-links .icon-link img {
-      width: 30px;
-      height: 30px;
-      border-radius: 5px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-    .modal input[type="text"] {
-      width: 100%;
-      margin-bottom: 10px;
-    }
-
-    .modal ul {
-      padding-left: 20px;
-    }
-
-    /* 滚动横幅红色强调 */
-    .login-warning {
-      color: red;
-      font-weight: bold;
+  
+  .logo-links .icon-link img {
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
 <body>
-  <div class="top-bar">
-    <marquee>防空洞免费代理 请不要使用该代理<span class="login-warning">登录</span>网站！（否则代理站可能被chrome或者edge浏览器识别为钓鱼网站）</marquee>
-    <button id="cookie-manager-btn">Cookie管理</button>
-    <button id="bookmark-manager-btn">书签管理</button>
-  </div>
-
   <div class="container">
     <div class="logo-links">
-      <a class="icon-link" href="/proxy/https%3A%2F%2Fcn.pornhub.com" target="_blank">
+      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/cn.pornhub.com" target="_blank">
         <img src="https://play-lh.googleusercontent.com/nX_X7VLuovWewAE9iJysyQ2XtZlq55ijTulOLquOxN1K0Ihx93F4p8COzJuihWV2H5Y" alt="Pornhub Logo" />
         一键直达 Pornhub
       </a>
-      <a class="icon-link" href="/proxy/https%3A%2F%2Fzh.xhamster.com" target="_blank">
+      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/zh.xhamster.com" target="_blank">
         <img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/e2/22/48/e2224825-e0a8-7d2f-571f-f4ae139e3992/source/256x256bb.jpg" alt="xHamster Logo" />
         一键直达 xHamster 
       </a>
     </div>
     <h1>防空洞专用代理</h1>
     <div class="qq-group">
-      <a class="icon-link" href="/proxy/http%3A%2F%2Fqm.qq.com%2Fcgi-bin%2Fqm%2Fqr%3F_wv%3D1027%26noverify%3D0%26group_code%3D1007418110" target="_blank">
+      <a class="icon-link" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&noverify=0&group_code=1007418110" target="_blank">
         <img src="https://static-00.iconduck.com/assets.00/qq-icon-256x256-gyghvfu1.png" alt="QQ Icon" />
         QQ群：1007418110
       </a>
     </div>
     <div class="tg-group">
-      <a class="icon-link" href="/proxy/https%3A%2F%2Ft.me%2F%2BqrFhk0Okw8QzYjhh" target="_blank">
+      <a class="icon-link" href="https://t.me/+qrFhk0Okw8QzYjhh" target="_blank">
         <img src="https://image.similarpng.com/very-thumbnail/2021/10/Telegram-icon-on-transparent-background-PNG.png" alt="TG Icon" />
         TG群组
       </a>
@@ -313,29 +256,6 @@
     </div>
   </div>
 
-  <!-- Cookie管理 Modal -->
-  <div class="modal-overlay" id="cookie-modal-overlay">
-    <div class="modal">
-      <button class="close-btn" id="close-cookie">X</button>
-      <h2>Cookie管理</h2>
-      <p>当前站点的Cookies：</p>
-      <ul id="cookie-list"></ul>
-      <button id="refresh-cookie">刷新Cookie列表</button>
-    </div>
-  </div>
-
-  <!-- 书签管理 Modal -->
-  <div class="modal-overlay" id="bookmark-modal-overlay">
-    <div class="modal">
-      <button class="close-btn" id="close-bookmark">X</button>
-      <h2>书签管理</h2>
-      <p>添加当前页面书签：<br><input type="text" id="bookmark-name" placeholder="书签名称" /><br><button id="add-bookmark">添加书签</button></p>
-      <p>已有书签：</p>
-      <ul id="bookmark-list"></ul>
-      <button id="refresh-bookmark">刷新书签列表</button>
-    </div>
-  </div>
-
   <div class="modal-overlay" id="modal-overlay" style="display: none;">
     <div class="modal" id="modal-content">
     </div>
@@ -349,7 +269,7 @@
           url = 'https://' + url
         }
         const encodedUrl = encodeURIComponent(url)
-        return '/proxy/' + encodedUrl
+        return `/proxy/${encodedUrl}`
       } catch (e) {
         return ''
       }
@@ -372,107 +292,13 @@
       }
     })
 
-    const cookieModal = document.getElementById('cookie-modal-overlay')
-    const bookmarkModal = document.getElementById('bookmark-modal-overlay')
-
-    document.getElementById('cookie-manager-btn').addEventListener('click', () => {
-      showCookieModal()
-    })
-
-    document.getElementById('bookmark-manager-btn').addEventListener('click', () => {
-      showBookmarkModal()
-    })
-
-    document.getElementById('close-cookie').addEventListener('click', () => {
-      cookieModal.style.display = 'none'
-    })
-
-    document.getElementById('close-bookmark').addEventListener('click', () => {
-      bookmarkModal.style.display = 'none'
-    })
-
-    // Cookie管理逻辑
-    function showCookieModal() {
-      cookieModal.style.display = 'flex'
-      refreshCookieList()
-    }
-
-    function refreshCookieList() {
-      const cookieList = document.getElementById('cookie-list')
-      cookieList.innerHTML = ''
-      const cookies = document.cookie.split(';')
-      cookies.forEach(c => {
-        const li = document.createElement('li')
-        li.textContent = c.trim()
-        cookieList.appendChild(li)
-      })
-    }
-
-    document.getElementById('refresh-cookie').addEventListener('click', refreshCookieList)
-
-    // 书签管理逻辑
-    function showBookmarkModal() {
-      bookmarkModal.style.display = 'flex'
-      refreshBookmarkList()
-    }
-
-    function getBookmarks() {
-      let bookmarks = localStorage.getItem('bookmarks')
-      if (!bookmarks) {
-        bookmarks = '[]'
-      }
-      return JSON.parse(bookmarks)
-    }
-
-    function setBookmarks(bm) {
-      localStorage.setItem('bookmarks', JSON.stringify(bm))
-    }
-
-    function refreshBookmarkList() {
-      const bookmarkList = document.getElementById('bookmark-list')
-      bookmarkList.innerHTML = ''
-      const bm = getBookmarks()
-      bm.forEach((b, index) => {
-        const li = document.createElement('li')
-        li.innerHTML = `${b.name}: <a href="${b.url}" target="_blank">${b.url}</a> <button data-idx="${index}" class="del-bm">删除</button>`
-        bookmarkList.appendChild(li)
-      })
-
-      bookmarkList.querySelectorAll('.del-bm').forEach(btn => {
-        btn.addEventListener('click', function() {
-          const idx = parseInt(this.getAttribute('data-idx'))
-          const bm = getBookmarks()
-          bm.splice(idx, 1)
-          setBookmarks(bm)
-          refreshBookmarkList()
-        })
-      })
-    }
-
-    document.getElementById('refresh-bookmark').addEventListener('click', refreshBookmarkList)
-
-    document.getElementById('add-bookmark').addEventListener('click', () => {
-      const name = document.getElementById('bookmark-name').value.trim()
-      if (!name) {
-        alert('请输入书签名称')
-        return
-      }
-      const url = window.location.href
-      const bm = getBookmarks()
-      bm.push({ name, url })
-      setBookmarks(bm)
-      refreshBookmarkList()
-      document.getElementById('bookmark-name').value = ''
-      alert('书签已添加')
-    })
-
-    // 弹窗（IP国家检测）
     const modalOverlay = document.getElementById('modal-overlay')
     const modalContent = document.getElementById('modal-content')
 
     if (localStorage.getItem('modalClosedForever') === 'true') {
       // 已永久关闭弹窗，直接返回
     } else {
+      // 利用第三方API获取IP所在国家
       fetch('https://ipapi.co/json')
       .then(r => r.json())
       .then(data => {
@@ -480,6 +306,7 @@
         showModal(country)
       })
       .catch(e => {
+        // 无法获取IP信息，默认正常提示
         showModal('UNKNOWN')
       })
     }
