--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7536521110445264"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
