--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </div>
     <div class="footer-text">技术无罪，请勿封杀</div>
     <div class="extra-note">
-      <p><strong>站长邮箱：</strong><a href="mailto:admin.obanarchy.org">admin.obanarchy.org</a></p>
+      <p><strong>站长邮箱：</strong><a href="mailto:admin@obanarchy.org">admin@obanarchy.org</a></p>
       <p>由于我只是一个初中生，我没钱，如果以后网站流量大了，免费套餐可能不够用，如有意愿欢迎联系我捐款❤️。</p>
     </div>
   </div>
