--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <img src="https://play-lh.googleusercontent.com/nX_X7VLuovWewAE9iJysyQ2XtZlq55ijTulOLquOxN1K0Ihx93F4p8COzJuihWV2H5Y" alt="Pornhub Logo" />
         一键直达 Pornhub
       </a>
-      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/hsex.men" target="_blank">
+      <a class="icon-link" href="https://fkd.obanarchy.org/proxy/iook.buzz" target="_blank">
         <img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/e2/22/48/e2224825-e0a8-7d2f-571f-f4ae139e3992/source/256x256bb.jpg" alt="xHamster Logo" />
         一键直达国产AV 
       </a>
